--- a/package.json
+++ b/package.json
@@ -5,5 +5,24 @@
     "axios": "^0.21.1",
     "fs-extra": "^9.1.0",
     "cheerio": "^1.0.0-rc.5"
-  }
+  },
+  "description": "<p align=\"center\">\r   <a href=\"http://www.audallabs.com\">\r     <img alt=\"Audal Labs Logo\" src=\"https://static.audallabs.com/logodark.png\" width=\"90\" />\r   </a>\r </p>",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/audal/gatsby-plugin-yoast-sitemap.git"
+  },
+  "keywords": [
+    "gatsby-plugin"
+  ],
+  "author": "Audal Labs",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/audal/gatsby-plugin-yoast-sitemap/issues"
+  },
+  "homepage": "https://github.com/audal/gatsby-plugin-yoast-sitemap#readme"
 }
